...
            })
      },
      contentWindowInsets = WindowInsets(20.dp, 10.dp, 20.dp, 20.dp)) {
        Column(modifier = Modifier.padding(it), verticalArrangement = Arrangement.spacedBy(16.dp)) {
          // The theme options : color scheme of the app
          Text(
              text = "Theme",
              style = MaterialTheme.typography.titleMedium,
              modifier = Modifier.testTag("themeTitle"))

          SingleChoiceSegmentedButtonRow(
              modifier = Modifier.testTag("themeSegmentedButtonRow").align(CenterHorizontally)) {
                themeOptions.forEachIndexed { index, label ->
...
