...

/**
 * This enum class is used to represent the settings manageable of the association. Contains a
 * function to get the icon corresponding to the setting.
 */
enum class AssociationSettings {
  Members,
  TreasuryTags,
  Events;

  fun getIcon(): ImageVector {
    return when (this) {
      Members -> Icons.Outlined.People
...
